# CRA-Global-Integrity-Engine

./: .gitignore  CHANGELOG.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  QUICKSTART.md  README.md  SECURITY.md  cra.py  cra_protocol.py  deployment_manifest.json  docker-compose.yml  integrity_engine.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci-cd.yaml
assets/: README.md
docs/: architecture.md  glossary.md  integration.md  whitepaper.md
examples/: README.md  demo_pipeline.py  sample_audit.ipynb
logs/: example_log.json
src/core/: artifact_logger.py  audit_runner.py  containment_protocol.py  model_sandbox.py
src/integrity/: __init__.py  hashing.py  timestamp.py
src/utils/: __init__.py  ledger_interface.py  verification.py
tests/: __init__.py  test_hashing.py  test_timestamp.py  test_verification.py
